--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ project(Practica_2_prob_2 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Practica_2_prob_2 main.cpp)
+add_executable(Practica_2_prob_2 main.cpp
+    combinacion.h
+    combinacion.cpp)
 
 include(GNUInstallDirs)
 install(TARGETS Practica_2_prob_2
